# kvfleet

./: .gitignore  README.md  pyproject.toml  requirements+scope.txt  task.md
docs/usecases/: internal-fleet-routing.md
src/kvfleet/: __init__.py  cli.py
src/kvfleet/adapters/: base.py  custom_http.py  ollama.py  openai_compat.py  tgi.py  triton.py  vllm.py
src/kvfleet/cache/: fingerprints.py  kv_affinity.py  semantic_cache.py
src/kvfleet/config/: loader.py  schema.py
src/kvfleet/eval/: compare.py  shadow.py
src/kvfleet/gateway/: dashboard.py  server.py
src/kvfleet/policy/: engine.py  pii.py  residency.py  tenant.py
src/kvfleet/registry/: models.py
src/kvfleet/router/: affinity.py  engine.py  explain.py  fallback.py  learned.py  multimodal.py  scoring.py  semantic.py  strategies.py
src/kvfleet/sdk/: async_client.py  sync_client.py
src/kvfleet/telemetry/: collector.py  cost_sync.py  gpu.py  health.py  metrics.py  rate_limits.py
tests/: __init__.py
tests/unit/: test_cache.py  test_config.py  test_enhancements.py  test_explain.py  test_new_features.py  test_policy.py  test_registry.py  test_router.py  test_semantic_learned.py  test_telemetry.py
